--- a/Level4_if/level4_hojin.ipynb
+++ b/Level4_if/level4_hojin.ipynb
@@ -26,7 +26,7 @@
     "else:\n",
     "    print(\"F\")\n",
     "    \n",
-    "#w heyrin"
+    "#w hyerin"
    ]
   },
   {
@@ -55,7 +55,7 @@
     "myinput.sort()\n",
     "print(myinput[1])\n",
     "\n",
-    "#w heyrin"
+    "#w hyerin"
    ]
   },
   {
@@ -85,7 +85,7 @@
     "a= map(int,input().split())\n",
     "print(\" \".join(str(i) for i in a if i<x))\n",
     "\n",
-    "#w heyrin"
+    "#w hyerin"
    ]
   },
   {
@@ -111,7 +111,7 @@
     "    sumscore =sumscore+((i/ maxscore) * 100)    \n",
     "print(sumscore/cnt)\n",
     "\n",
-    "#w heyrin"
+    "#w hyerin"
    ]
   },
   {
@@ -145,7 +145,7 @@
     "for i in x:\n",
     "    print(\"%0.3f\"%round(i,3),\"%\",sep='')\n",
     "\n",
-    "#w heyrin"
+    "#w hyerin"
    ]
   },
   {
@@ -187,7 +187,7 @@
     "        cnt +=1    \n",
     "print(cnt)\n",
     "\n",
-    "#w heyrin"
+    "#w hyerin"
    ]
   }
  ],
