--- a/Level5_func/level5_hojin.ipynb
+++ b/Level5_func/level5_hojin.ipynb
@@ -15,10 +15,8 @@
    "source": [
     "non_self=[]\n",
     "for i in range(1,10000):\n",
-    "    sum_num=i\n",
-    "    for j in str(i):\n",
-    "        sum_num+=int(j)\n",
-    "    non_self.append(sum)\n",
+    "    sum_num=sum([int(i) for i in str(i)])+int(i)\n",
+    "    non_self.append(sum_num)\n",
     "    if i not in non_self:\n",
     "        print(i)"
    ]
@@ -32,22 +30,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "a=int(input())\n",
     "cnt=0\n",
     "for i in range(1,a+1):\n",
     "    str_num=str(i)\n",
-    "    len_str=len(str_num)\n",
-    "    sum_num=0\n",
-    "    for j in str_num:\n",
-    "        sum_num+=int(j)\n",
+    "    len_str=len(str_num)    \n",
+    "    sum_num=sum([int(i) for i in str_num])    \n",
     "    if sum_num == (int(str_num[0])+int(str_num[-1]))*len_str/2:\n",
     "        cnt+=1\n",
-    "print(cnt)\n",
-    "        "
+    "print(cnt)"
    ]
   },
   {
@@ -59,9 +63,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n",
+      "                       *                       \n",
+      "                      * *                      \n",
+      "                     *****                     \n",
+      "                    *     *                    \n",
+      "                   * *   * *                   \n",
+      "                  ***** *****                  \n",
+      "                 *           *                 \n",
+      "                * *         * *                \n",
+      "               *****       *****               \n",
+      "              *     *     *     *              \n",
+      "             * *   * *   * *   * *             \n",
+      "            ***** ***** ***** *****            \n",
+      "           *                       *           \n",
+      "          * *                     * *          \n",
+      "         *****                   *****         \n",
+      "        *     *                 *     *        \n",
+      "       * *   * *               * *   * *       \n",
+      "      ***** *****             ***** *****      \n",
+      "     *           *           *           *     \n",
+      "    * *         * *         * *         * *    \n",
+      "   *****       *****       *****       *****   \n",
+      "  *     *     *     *     *     *     *     *  \n",
+      " * *   * *   * *   * *   * *   * *   * *   * * \n",
+      "***** ***** ***** ***** ***** ***** ***** *****\n"
+     ]
+    }
+   ],
    "source": [
     "import copy\n",
     "import math\n",
