--- a/Level5_func/level5_hojin.ipynb
+++ b/Level5_func/level5_hojin.ipynb
@@ -15,10 +15,8 @@
    "source": [
     "non_self=[]\n",
     "for i in range(1,10000):\n",
-    "    sum_num=i\n",
-    "    for j in str(i):\n",
-    "        sum_num+=int(j)\n",
-    "    non_self.append(sum)\n",
+    "    sum_num=sum([int(i) for i in str(i)])+int(i)\n",
+    "    non_self.append(sum_num)\n",
     "    if i not in non_self:\n",
     "        print(i)"
    ]
@@ -32,22 +30,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n",
+      "144\n"
+     ]
+    }
+   ],
    "source": [
     "a=int(input())\n",
     "cnt=0\n",
     "for i in range(1,a+1):\n",
     "    str_num=str(i)\n",
-    "    len_str=len(str_num)\n",
-    "    sum_num=0\n",
-    "    for j in str_num:\n",
-    "        sum_num+=int(j)\n",
+    "    len_str=len(str_num)    \n",
+    "    sum_num=sum([int(i) for i in str_num])    \n",
     "    if sum_num == (int(str_num[0])+int(str_num[-1]))*len_str/2:\n",
     "        cnt+=1\n",
-    "print(cnt)\n",
-    "        "
+    "print(cnt)"
    ]
   },
   {
@@ -59,9 +63,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n",
+      "                       *                       \n",
+      "                      * *                      \n",
+      "                     *****                     \n",
+      "                    *     *                    \n",
+      "                   * *   * *                   \n",
+      "                  ***** *****                  \n",
+      "                 *           *                 \n",
+      "                * *         * *                \n",
+      "               *****       *****               \n",
+      "              *     *     *     *              \n",
+      "             * *   * *   * *   * *             \n",
+      "            ***** ***** ***** *****            \n",
+      "           *                       *           \n",
+      "          * *                     * *          \n",
+      "         *****                   *****         \n",
+      "        *     *                 *     *        \n",
+      "       * *   * *               * *   * *       \n",
+      "      ***** *****             ***** *****      \n",
+      "     *           *           *           *     \n",
+      "    * *         * *         * *         * *    \n",
+      "   *****       *****       *****       *****   \n",
+      "  *     *     *     *     *     *     *     *  \n",
+      " * *   * *   * *   * *   * *   * *   * *   * * \n",
+      "***** ***** ***** ***** ***** ***** ***** *****\n"
+     ]
+    }
+   ],
    "source": [
     "import copy\n",
     "import math\n",
@@ -89,6 +125,78 @@
     "for i in star_list:\n",
     "    print(i)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n",
+      "                       *                       \n",
+      "                      * *                      \n",
+      "                     *****                     \n",
+      "                    *     *                    \n",
+      "                   * *   * *                   \n",
+      "                  ***** *****                  \n",
+      "                 *           *                 \n",
+      "                * *         * *                \n",
+      "               *****       *****               \n",
+      "              *     *     *     *              \n",
+      "             * *   * *   * *   * *             \n",
+      "            ***** ***** ***** *****            \n",
+      "           *                       *           \n",
+      "          * *                     * *          \n",
+      "         *****                   *****         \n",
+      "        *     *                 *     *        \n",
+      "       * *   * *               * *   * *       \n",
+      "      ***** *****             ***** *****      \n",
+      "     *           *           *           *     \n",
+      "    * *         * *         * *         * *    \n",
+      "   *****       *****       *****       *****   \n",
+      "  *     *     *     *     *     *     *     *  \n",
+      " * *   * *   * *   * *   * *   * *   * *   * * \n",
+      "***** ***** ***** ***** ***** ***** ***** *****\n"
+     ]
+    }
+   ],
+   "source": [
+    "import copy\n",
+    "import math\n",
+    "\n",
+    "a=int(input())\n",
+    "iternum=int(math.log(a/3,2))\n",
+    "\n",
+    "def dup_star(in_list,tot,cur=1):    \n",
+    "    new_list=copy.copy(in_list)\n",
+    "    \n",
+    "    inlist_len=len(in_list)\n",
+    "    for list_num,list_ele in enumerate(in_list):\n",
+    "        padding=' '*(inlist_len)\n",
+    "        new_list[list_num]=padding+list_ele+padding\n",
+    "    \n",
+    "    for list_ele in in_list:\n",
+    "        new_list.append(list_ele+' '+list_ele)   \n",
+    "    \n",
+    "    if tot==cur:\n",
+    "        for i in new_list:\n",
+    "            print(i)\n",
+    "    else:\n",
+    "        return dup_star(new_list,tot,cur+1)\n",
+    "\n",
+    "star_list=['  *  ',' * * ','*****']\n",
+    "dup_star(star_list,iternum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
