--- a/Level5_func/level5_hojin.ipynb
+++ b/Level5_func/level5_hojin.ipynb
@@ -127,6 +127,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### solution 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -190,13 +197,6 @@
     "star_list=['  *  ',' * * ','*****']\n",
     "dup_star(star_list,iternum)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
