--- a/Level8_rule/level8_rule_hj.ipynb
+++ b/Level8_rule/level8_rule_hj.ipynb
@@ -207,6 +207,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "10 12 3 9\n",
+      "10 12 7 2\n",
+      "13 11 5 6\n",
+      "33\n",
+      "-1\n",
+      "83\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "math.gcd(3,4)\n",
+    "\n",
+    "numtot=int(input())\n",
+    "qlist=[]\n",
+    "for i in range(numtot):\n",
+    "    qlist.append(list(map(int,input().split())))\n",
+    "    \n",
+    "for i in qlist:\n",
+    "    M, N, x_, y_=i[0], i[1], i[2], i[3]\n",
+    "    \n",
+    "    if M>=N:\n",
+    "        (M ,N) = (N, M)\n",
+    "        (x_, y_) = (y_, x_)\n",
+    "    \n",
+    "\n",
+    "    M_i=N/math.gcd(M,N)\n",
+    "    start_index=x_\n",
+    "\n",
+    "    for i in range(int(M_i)):\n",
+    "        next_try=(start_index+i*M) % N\n",
+    "        next_try=(next_try if next_try !=0 else N)\n",
+    "        if y_ == next_try:\n",
+    "            print(start_index+i*M)\n",
+    "            break\n",
+    "    else:\n",
+    "        print(-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "카잉 solution 2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
