--- a/Level8_rule/level8_rule_hj.ipynb
+++ b/Level8_rule/level8_rule_hj.ipynb
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -216,10 +216,10 @@
      "text": [
       "3\n",
       "10 12 3 9\n",
-      "10 12 7 2\n",
-      "13 11 5 6\n",
       "33\n",
+      "10 12 7 2\n",
       "-1\n",
+      "13 11 5 6\n",
       "83\n"
      ]
     }
@@ -231,15 +231,12 @@
     "numtot=int(input())\n",
     "qlist=[]\n",
     "for i in range(numtot):\n",
-    "    qlist.append(list(map(int,input().split())))\n",
+    "    qlist=list(map(int,input().split()))\n",
+    "    M, N, x_, y_=qlist[0], qlist[1], qlist[2], qlist[3]\n",
     "    \n",
-    "for i in qlist:\n",
-    "    M, N, x_, y_=i[0], i[1], i[2], i[3]\n",
-    "    \n",
-    "    if M>=N:\n",
+    "    if M<=N:\n",
     "        (M ,N) = (N, M)\n",
-    "        (x_, y_) = (y_, x_)\n",
-    "    \n",
+    "        (x_, y_) = (y_, x_)    \n",
     "\n",
     "    M_i=N/math.gcd(M,N)\n",
     "    start_index=x_\n",
